# my_own_cli

./: README.md  pyproject.toml
agent_sdk/: .env  main.py  mcp_client.py  pyproject.toml  sdk_client.py
cli/: config.py  main.py  readme.tsxt
mcp_server/: README.md  client.py  pyproject.toml  server.py  work.txt
