[project]
name = "my-own-cli"
version = "0.1.0"
description = "AI CLI powered by OpenAI Agent SDK + MCP"
readme = "README.md"
authors = [{ name = "M.Hassaan Arain" }]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.22.0",
    "openai-agents>=0.6.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.scripts]
my-own-cli = "cli.main:main"